[package]
name = "cardano-tg-roll-bot"
version = "0.1.1"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
roller = { git = "https://github.com/ItLisBy/roller" }
openssl = { version = "0.10.64", features = ["vendored"] }