[package]
name = "cardano-tg-roll-bot"
version = "0.1.3-alpha"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
roller = { git = "https://github.com/ItLisBy/roller" }
openssl = { version = "0.10.66", features = ["vendored"] }
rand = "0.9.0-alpha.1"
serde = { version = "1.0.204", features = ["derive"] }
confy = "0.6.1"